--- a/WebProekt/src/main/resources/application.properties
+++ b/WebProekt/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=1010
 
 spring.profiles.active=prod
 
+server.servlet.session.timeout=60m
 server.servlet.session.cookie.name=D&BOnlineBoutique
 
 spring.mvc.hiddenmethod.filter.enabled=true
