--- a/WebProekt/src/main/resources/application.properties
+++ b/WebProekt/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.servlet.session.timeout=60m
 server.servlet.session.cookie.name=D&BOnlineBoutique
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.security.oauth2.client.registration.google.client-id=62100069503-598hk8q05qgnfef83n3223q6d5f7sgte.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=0ZzMia_TFH3x0s4bb10AYtw0
